--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import DiaryEntry from '../components/DiaryEntry.jsx';
 ---
-
-<Layout>
-	<Welcome />
+<Layout title="Work Diary">
+  <h1 class="text-3xl font-bold text-center my-8">Work Diary</h1>
+  <DiaryEntry client:load />
 </Layout>
