--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,23 @@
 ---
 const { title } = Astro.props;
 ---
-<html>
-  <head>
-    <title>{title}</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-  </head>
-  <body>
-    <main>
-      <slot />
-    </main>
-  </body>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8" />
+	<script is:inline>
+		const theme = (() => {
+			if (localStorage.getItem('theme')) {
+				return localStorage.getItem('theme');
+			}
+			return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+		})();
+		document.documentElement.classList[theme === 'dark' ? 'add' : 'remove']('dark');
+	</script>
+</head>
+
+<body class="dark:bg-gray-900">
+	<slot />
+</body>
+
 </html>
