--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import Layout from '../layouts/Layout.astro';
 import DiaryEntry from '../components/DiaryEntry.jsx';
 ---
 <Layout title="Work Diary">
-  <h1 class="text-3xl font-bold text-center my-8">Work Diary</h1>
-  <DiaryEntry client:load />
+	<div class="relative px-6 my-8">
+		<h1 class="text-3xl font-bold text-center text-gray-800 dark:text-gray-100">Work Diary</h1>
+		<div class="absolute right-6 top-1/2 -translate-y-1/2" id="theme-toggle"></div>
+	</div>
+	<DiaryEntry client:load />
 </Layout>
